2002-01-21  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/PyDO/operators.py (SET): added support for IN.

2002-01-21  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sw.conf.in: documented Configuration.mimeHandlers.

	* SkunkWeb/Services/templating/__init__.py (__initHooks): removed
	dumb comment.

	* SkunkWeb/Services/templating/Handler.py: Added
	Configuration.mimeHandlers, for optional mimetype-specific request
	handlers.


2002-01-17  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/PyDO/PyDO.py (PyDO.static_getSome): Fixes for case when
	an empty list should be returned, and to getTupleWhere and
	getSomeWhere for cases when arguments are empty.


2002-01-14  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/PyDO/operators.py (tupleToSQL): Fixed nasty bug caused by
	stray colon.

	* pylibs/PyDO/PyDO.py: cleaned up by deleting old useless
	commented-out code.

2002-01-13  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/PyDO/mysqlconn.py (PyDOMySQL.__unpackConnectArgs): bug
	fixes.  After doing an insert, c.fetchall() returns an empty
	sequence rather than raising an error; c.fetchone() will return
	None in that case.

	* pylibs/PyDO/PyDBI.py (DBIGetConnection): Fixed some painfully
	dumb typos I introduced.

	* SkunkWeb/sample_webdocs/demo/gallery/comp/list_thumbnails.dcmp:
	Use component stack to determine the current path of this
	component, to determine where thumbnails.py is (if not given to
	the component)

	* SkunkWeb/sw.conf.in: documented new mysql service configuration
	variables, and made minor correction to description of
	sessionHandler.

	* SkunkWeb/Services/mysql/__init__.py: modified to use the newly
	refurbished MySQL pylib.

	* pylibs/MySQL/__init__.py: modified to use MySQLdb, optionally
	perform a rollback step, and optionally perform a connection
	validation check before handing out a connection.

	* pylibs/PyDO/PyDBI.py (DBIGetConnection): modified to accept both
	connect strings and dictionaries of connect parameters.
